google analytics added

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <p>Hi,</p><br/>
                     <p>I'm Aditya Relangi.</p>
                     <p>If you think travel and entrepreneurship go together then you should join <a href="http://www.jagritiyatra.com/" style="text-decoration:none" target="_blank">these</a> guys on their journey.</p><br/>
-                    <p>Drop in a line if you want to <a href="mailto:hello@adirelangi.com"><i>chat.</i></a> </p>
+                    <p>Drop in a line if you want to <a href="mailto:hello@adityarelangi.com"><i>chat.</i></a> </p>
                 </div>
                 <div class="tab-pane" id="lB">
                     
