--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <li><a href="#lB" data-toggle="tab"><img src="assets/img/projects.png" title="My Projects" alt="my projects"></a></li>
                 <li><a href="books/"><img title="Books" src="assets/img/book.png" title="Books Read" alt="Books read"></a></li>
                 <li><a href="https://github.com/arelangi" target="_blank"><img title="My Github Profile" src="assets/img/blacktocat.png"  alt="my github"></a></li>
-                <li><a href="blog/" target="_blank"><img title="My Blog" src="assets/img/blog.png"  alt ="my blog"></a></li>
+                <li><a href="blog/" target="_blank"><img title="My Blog" src="assets/img/writing.png"  alt ="my blog"></a></li>
               </ul>
               <div class="tab-content">
                 <div class="tab-pane active" id="lA">
