--- a/books/index.html
+++ b/books/index.html
@@ -63,7 +63,7 @@
 <body>
     
     <div class="hero masthead">
-            <h1 id="name"><a href="http://adityarelangi.com/books">aditya relangi</a></h1>
+            <h1 id="name"><a href="http://adityarelangi.com/">aditya relangi</a></h1>
             <h2 id="byline">Book Reviews</h2>
     </div>
 
