--- a/books/index.html
+++ b/books/index.html
@@ -13,49 +13,51 @@
 
 
 <style>
-    @font-face { font-family: Castorgate; src: url('../assets/fonts/castorgate/CASTOR.ttf'); } 
+  @font-face { font-family: Castorgate; src: url('../assets/fonts/castorgate/CASTOR.ttf'); } 
 
-    .hero {
-        text-align: center;
-        margin: 6em auto 3em;
-        }
-    .hero h1 {
-        font-size: 1000%;
-        margin: 0;
-        padding: 0;
-        font-weight: 100;
-        font-family: Castorgate;
-    }
+  .hero {
+    text-align: center;
+    margin: 6em auto 3em;
+  }
+  .hero h1 {
+    font-size: 1000%;
+    margin: 0;
+    padding: 0;
+    font-weight: 100;
+    font-family: Castorgate;
+  }
 
-    .hero h2{
-    	font-family: Castorgate;	
-    }
+  .hero h2{
+    font-family: Castorgate;	
+  }
 
-    .hero a {text-decoration: none}
-    
+  .hero a {
+    text-decoration: none
+  }
 
-    img{
-      width: 256px;
-      height: 256px;
-    }
 
-    p{
-      font-size: 12pt;
-    }
+  img{
+    width: 256px;
+    height: 256px;
+  }
 
-    .item { 
-    	width: 20%; 
-	    margin-bottom: 15px;
-	}
+  p{
+    font-size: 12pt;
+  }
 
-	.col-center{
-	  margin-left: 20%;
-	}
+  .item { 
+    width: 20%; 
+    margin-bottom: 15px;
+  }
 
-	#byline{
-		margin-top: 7%;
-		margin-bottom: 3%;
-	}
+  .col-center{
+    margin-left: 20%;
+  }
+
+  #byline{
+    margin-top: 7%;
+    margin-bottom: 3%;
+  }
 
 </style>
 
@@ -68,7 +70,8 @@
     </div>
 
 <div class="container col-center" id="container">
-	<div class="item"><a href="http://google.com"><img src="../assets/img/books/2015/missing-person.jpg"></a></div>
+  <div class="item"><a href="http://adityarelangi.com/blog/book-review-the-martian/"><img src="../assets/img/books/2015/the-martian.jpg"></a></div>
+  <!--<div class="item"><a href="http://google.com"><img src="../assets/img/books/2015/missing-person.jpg"></a></div>-->
 </div>
     
 </body>
