--- a/books/index.html
+++ b/books/index.html
@@ -71,8 +71,7 @@
 
 <div class="container col-center" id="container">
   <div class="item"><a href="http://adityarelangi.com/blog/book-review-the-martian/"><img src="../assets/img/books/2015/the-martian.jpg"></a></div>
-  <!--<div class="item"><a href="http://adityarelangi.com/blog/book-review-the-martian/"><img src="../assets/img/books/2015/missing-person.jpg"></a></div>-->
-  <!--<div class="item"><a href="http://google.com"><img src="../assets/img/books/2015/red-rising.jpg"></a></div>-->
+  <div class="item"><a href="http://adityarelangi.com/blog/book-review-red-rising/"><img src="../assets/img/books/2015/red-rising.jpg"></a></div>
 </div>
     
 </body>
