made the home page responsive and changed the css for the blog header

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         }
     .hero h1 {
         font-size: 1000%;
-        margin: 0;
-        padding: 0;
+        margin: -3%;
         font-weight: 100;
         font-family: Castorgate;
-        }
+        line-height: 1em;
+    }
 
     .container { margin-top: 10em; }
 
@@ -51,7 +51,7 @@
 <div class="container">
 
            
-           <div class="tabbable tabs-left span8 pull-center" style="padding: 1em 10em;">
+           <div class="tabbable tabs-left span8 pull-center" style="margin: -3% 20%;">
               <ul class="nav nav-tabs">
                 <li class="active"><a href="#lA" data-toggle="tab"><img src="assets/img/info.png" title="About Me" alt="about me"></a></li>
                 <li><a href="#lB" data-toggle="tab"><img src="assets/img/projects.png" title="My Projects" alt="my projects"></a></li>
