books page improved. Not yet ideal though

--- a/books/index.html
+++ b/books/index.html
@@ -21,10 +21,11 @@
   }
   .hero h1 {
     font-size: 1000%;
-    margin: 0;
+    margin: -3%;
     padding: 0;
     font-weight: 100;
     font-family: Castorgate;
+    
   }
 
   .hero h2{
@@ -32,13 +33,15 @@
   }
 
   .hero a {
-    text-decoration: none
+    text-decoration: none;
+    line-height: 1em;
   }
 
 
   img{
-    width: 256px;
-    height: 256px;
+    max-width: 256px;
+    max-height: 256px;
+   
   }
 
   p{
@@ -59,6 +62,10 @@
     margin-bottom: 3%;
   }
 
+  .maintainer{
+    width:940px;
+  }
+
 </style>
 
 </head>
@@ -69,10 +76,12 @@
             <h2 id="byline">Book Reviews</h2>
     </div>
 
-<div class="container col-center" id="container">
-  <div class="item"><a href="http://adityarelangi.com/blog/book-review-golden-son/"><img src="../assets/img/books/2015/golden-son.jpg"></a></div>
-  	<div class="item"><a href="http://adityarelangi.com/blog/book-review-red-rising/"><img src="../assets/img/books/2015/red-rising.jpg"></a></div>
-	<div class="item"><a href="http://adityarelangi.com/blog/book-review-the-martian/"><img src="../assets/img/books/2015/the-martian.jpg"></a></div>
+<div class=" col-center" >
+  <div class="maintainer" id="container">
+    <div class="item"><a href="http://adityarelangi.com/blog/book-review-golden-son/"><img src="../assets/img/books/2015/golden-son.jpg"></a></div>
+    	<div class="item"><a href="http://adityarelangi.com/blog/book-review-red-rising/"><img src="../assets/img/books/2015/red-rising.jpg"></a></div>
+  	<div class="item"><a href="http://adityarelangi.com/blog/book-review-the-martian/"><img src="../assets/img/books/2015/the-martian.jpg"></a></div>
+  </div>
 </div>
     
 </body>
