--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
                     <p>Drop in a line if you want to <a href="mailto:hello@adityarelangi.com"><i>chat.</i></a> </p>
                 </div>
                 <div class="tab-pane" id="lB">
+
+                    <div>
+                    <br/>
+                    <b><a href="http://lgbtq.in">LGBTQ.in</a></b>
+                    <p>lgbtq.in is a well designed single page website that is built to bring about awareness among the polity of India to make same-sex marriage legal. You can find the source code at <a href="https://github.com/arelangi/lgbtq.in">Github</a>.</p>
+                    </div> 
                     
                     <div>
                     <br/>
