--- a/books/index.html
+++ b/books/index.html
@@ -81,6 +81,7 @@
     <div class="item"><a href="http://adityarelangi.com/blog/book-review-golden-son/"><img src="../assets/img/books/2015/golden-son.jpg"></a></div>
     	<div class="item"><a href="http://adityarelangi.com/blog/book-review-red-rising/"><img src="../assets/img/books/2015/red-rising.jpg"></a></div>
   	<div class="item"><a href="http://adityarelangi.com/blog/book-review-the-martian/"><img src="../assets/img/books/2015/the-martian.jpg"></a></div>
+    <div class="item"><a href="http://adityarelangi.com/blog/between-the-world-and-me/"><img src="../assets/img/books/2015/between-the-world-and-me.jpg"></a></div>
   </div>
 </div>
     
