--- a/books/index.html
+++ b/books/index.html
@@ -79,10 +79,13 @@
 <div class=" col-center" >
   <div class="maintainer" id="container">
     <div class="item"><a href="http://adityarelangi.com/blog/book-review-golden-son/"><img src="../assets/img/books/2015/golden-son.jpg"></a></div>
-    	<div class="item"><a href="http://adityarelangi.com/blog/book-review-red-rising/"><img src="../assets/img/books/2015/red-rising.jpg"></a></div>
-  	<div class="item"><a href="http://adityarelangi.com/blog/book-review-the-martian/"><img src="../assets/img/books/2015/the-martian.jpg"></a></div>
-    <div class="item"><a href="http://adityarelangi.com/blog/book-review-between-the-world-and-me/"><img src="../assets/img/books/2015/between-the-world-and-me.jpg"></a></div>
-    <div class="item"><a href="http://adityarelangi.com/blog/book-review-the-emergency-a-personal-history/"><img src="../assets/img/books/2015/the-emergency.jpg"></a></div>
+    	<div class="item"><a href="http://adityarelangi.com/blog/book-review-red-rising/"><img src="../assets/img/books/2015/red-rising.jpg" alt="Red Rising" ></a></div>
+  	<div class="item"><a href="http://adityarelangi.com/blog/book-review-the-martian/"><img src="../assets/img/books/2015/the-martian.jpg" alt="The martian"></a></div>
+    <div class="item"><a href="http://adityarelangi.com/blog/book-review-between-the-world-and-me/"><img src="../assets/img/books/2015/between-the-world-and-me.jpg" alt="between the world and me"></a></div>
+    <div class="item"><a href="http://adityarelangi.com/blog/book-review-the-emergency-a-personal-history/"><img src="../assets/img/books/2015/the-emergency.jpg" alt="the emergency" ></a></div>
+    <div class="item"><a href="http://adityarelangi.com/blog/book-review-how-about-never-is-never-good-for-you-a-life-in-cartoons/"><img src="../assets/img/books/2016/how-about-never.jpg" alt="how about never, is never good enough for you"></a></div>
+     <div class="item"><a href="http://adityarelangi.com/blog/book-review-the-emergency-a-personal-history/"><img src="../assets/img/books/2015/the-emergency.jpg" alt="the emergency" ></a></div>
+   
   </div>
 </div>
     
