update index page

--- a/index.html
+++ b/index.html
@@ -61,9 +61,14 @@
               </ul>
               <div class="tab-content">
                 <div class="tab-pane active" id="lA">
-                    <p>Hi,</p><br/>
-                    <p>I'm Aditya Relangi.</p>
-                    <p>If you think travel and entrepreneurship go together then you should join <a href="http://www.jagritiyatra.com/" style="text-decoration:none" target="_blank">these</a> guys on their journey.</p><br/>
+                    <br/><br/>
+                    <br/><br/>
+                    <p>I code. I endeavor to get better at it everyday</p>
+                    <p>I currently work at a bank; handling data, transforming it so that others can make sense of it</p>
+                    <p>And I strongly believe privacy, security and ecnryption are for everyone and should be absolute</p>
+                    
+                    <br/><br/><br/>
+                    <br/><br/><br/><br/>
                     <p>Drop in a line if you want to <a href="mailto:hello@adityarelangi.com"><i>chat.</i></a> </p>
                 </div>
                 <div class="tab-pane" id="lB">
