--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
                     <br/><br/>
                     <p>Hello,</p>
                     <p>I'm Aditya Relangi.</p>
-                    <p>This is my website. You are on it. I wonder why?</p>
-                    <p>Anyway, click the icons on the left to learn more.</p>
-                    <p>Bye!</p>
+                    <p>This is my website.</p>
                 </div>
                 <div class="tab-pane" id="lB">
 
