--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta name="google-site-verification" content="3gdxFG9KizsIHiw40kAv_068LQytJ9fmhQVL9CrWG-4" />
 <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-responsive.min.css">
 <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
 
 
 <style>
@@ -66,6 +67,8 @@
                     <p>Hello,</p>
                     <p>I'm Aditya Relangi.</p>
                     <p>This is my website.</p>
+                    <p>Look around. I write sometimes. Maybe it'll interest you, maybe not. You can also take a look at the projects that I work on.</p>
+                    <p>Ciao!</p>
                 </div>
                 <div class="tab-pane" id="lB">
 
