--- a/talks/index.html
+++ b/talks/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico?">
     <link rel="stylesheet" href="http://adityarelangi.com//assets/css/skeleton/stylesheets/combined.css" />
     <title>Aditya Relangi's Blog</title>
     <meta name="application-name" content="Aditya Relangi's Blog" />
