--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p>Hello,</p>
                     <p>I'm Aditya Relangi.</p>
                     <p>This is my website.</p>
-                    <p>Look around. I write sometimes. Maybe it'll interest you, maybe not. You can also take a look at the projects that I work on.</p>
+                    <p>Look around. I write sometimes. Maybe it'll interest you, maybe not. You can also take a look at the projects I work on.</p>
                     <p>Ciao!</p>
                 </div>
                 <div class="tab-pane" id="lB">
