Uploaded the new presentation

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     </div>
 
                     <div class="span_2_of_3">
-                        <p class="copy-text">I work for a bank as a software engineer.
+                        <p class="copy-text">I work at a bank building products.
                             <br>
                             <br> I get to work on things like Machine Learning, Artificial Intelligence and Blockchains(lucky, right?).
                             <br>
