--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!--title-->
-    <title>Personal Website of Aditya Relangi</title>
+    <title>Aditya Relangi</title>
     <!--meta tags-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -233,7 +233,7 @@
                     <div class="span_2_of_3">
                         <p class="copy-text">I work at a bank building products.
                             <br>
-                            <br> I get to work on things like Machine Learning, Artificial Intelligence and Blockchains(lucky, right?).
+                            <br> I get to work on things like Distributed Systems, Machine Learning, Artificial Intelligence and Blockchains.
                             <br>
                             <br> I ocassionally speak at tech conferences and sometimes write.</p>
                     </div>
@@ -241,6 +241,7 @@
             </div>
         </div>
 
+<!--
         <div class="maincontent">
             <div class="section group projects">
                 <div class="col span_1_of_3">
@@ -278,7 +279,7 @@
                 </div>
             </div>
         </div>
-
+-->
         <div class="headwrap">
             <div class="maincontent">
                 <div class="section group people">
