index page change

--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
                     <div class="span_2_of_3">
                         <p class="copy-text">I work at a bank building data products.
                             <br>
-                            <br> I get to work on things like Data Engineering, Distributed Systems, Machine Learning, Artificial Intelligence and System Architecture.
+                            <br> I get to work on things like Data Engineering, Data Science, Distributed Systems, Machine Learning and Data Governance.
                             <br>
                             <br> I occasionally speak at tech conferences and sometimes write.
                             <br>
-                            <br> I also work on different podcasts outside of work.
+                            <br> I also podcast outside of work.
                         </p>
 
                     </div>
