--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                             <br>
                             <br> I get to work on things like Data Engineering, Data Science, Distributed Systems, Machine Learning and Data Governance.
                             <br>
-                            <br> I occasionally speak at tech conferences and sometimes write.
+                            <br> I occasionally <a href="/talks">speak at tech conferences</a> and have a few <a href="https://patents.google.com/?inventor=aditya+relangi&oq=aditya+relangi">patents to my name</a>.
                             <br>
                             <br> I also podcast outside of work.
                         </p>
