change where I work

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     </div>
 
                     <div class="span_2_of_3">
-                        <p class="copy-text">I work at a bank building data products.
+                        <p class="copy-text">I work at a tech company building data products.
                             <br>
                             <br> I get to work on things like Data Engineering, Data Science, Distributed Systems, Machine Learning and Data Governance.
                             <br>
