update home page

--- a/index.html
+++ b/index.html
@@ -241,59 +241,18 @@
                     </div>
 
                     <div class="span_2_of_3">
-                        <p class="copy-text">I work at a tech company building data products.
+                        <p class="copy-text">I work at a tech company building data and ML products.
                             <br>
-                            <br> I get to work on things like Data Engineering, Data Science, Distributed Systems, Machine Learning and Data Governance.
+                            <br> I get to work on things like Data Engineering, LLMs, Machine Learning, Engineering Productivity and Strategy.
                             <br>
                             <br> I occasionally <a href="/talks">speak at tech conferences</a> and have a few <a href="https://patents.google.com/?inventor=aditya+relangi&oq=aditya+relangi">patents to my name</a>.
                             <br>
-                            <br> I also podcast outside of work.
                         </p>
 
                     </div>
                 </div>
             </div>
         </div>
-
-<!--
-        <div class="maincontent">
-            <div class="section group projects">
-                <div class="col span_1_of_3">
-                    <h3>PROJECTS</h3>
-                </div>
-
-                <div class="col span_1_of_3 project-sub">
-                    <p>Akira</p>
-                    <p>Akira is a virtual assistant that understands natural language queries.</p>
-                    <p>Akira integrates several data sources to provide information and to track and execute repetitive tasks.</p>
-                    <p>It's a work in progress.</p>
-                </div>
-                <div class="col span_1_of_3 project-sub">
-                    <p><a href="https://github.com/logzer0/granda">Granda</a></p>
-                    <p>Granda is a self hosted serverless framework written in Go.</p>
-                    <p>It uses Docker as the container engine and a Golang web server to manage the state.</p>
-                    <p>It is written with the idea of demystifying how serverless platforms work.</p>
-                </div>
-            </div>
-            <div class="section group projects">
-                <div class="col span_1_of_3">
-
-                </div>
-                <div class="col span_1_of_3 project-sub">
-                    <p>Akira Finance</p>
-                    <p>Akira Finance is part of Akira, it's an application to track the income and expenditure .</p>
-                    <p>It interfaces directly with the user's bank accounts and visualizes the expenditure data.</p>
-                    <p>It also supports an sms bot to perform a specific set of functions.</p>
-                </div>
-                <div class="col span_1_of_3 project-sub">
-                    <p><a href="https://github.com/arelangi">And more...</a></p>
-                    <p>Apart from the select few listed above, I also work on a bunch of other projects.</p>
-                    <p>That's a lot about me.</p>
-                    <p></p>
-                </div>
-            </div>
-        </div>
--->
         <div class="headwrap">
             <div class="maincontent">
                 <div class="section group people">
