update email address

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
         <div class="headwrap">
             <div class="head">
-                <a href="mailto:adi@logzero.email">Say hello!</a>
+                <a href="mailto:arelangi@mailfence.com">Say hello!</a>
             </div>
             <div class="maincontent">
                 <div class="section group">
